# sign-docs

./: .gitignore  LICENSE  README.md  README.zh.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
