[package]
name = "sign-docs"
version = "1.1.0"
description = "SignDocs - Document Signing and Stamping Desktop Application"
authors = []
edition = "2021"

[lib]
name = "sign_docs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
